added :JWT SECRET KEY

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_SSLMODE=disable
 PGDATA=/var/lib/postgresql/post-datas
+JWT_SECRET_KEY=WHic3i9cGl
