--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,13 @@ ENVIRONMENT=develop
 LOG_LEVEL=info
 HTTP_PORT=5005
 
-DATABASE_URL=postgres://postgres:postgres@db:5432/zikr_app?sslmode=disable
+DATABASE_URL=postgres://postgres:root@db:5432/zikr_app?sslmode=disable
 
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_DB=zikr_app
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=root
 POSTGRES_SSLMODE=disable
 PGDATA=/var/lib/postgresql/post-datas
 JWT_SECRET_KEY=WHic3i9cGl
